add background color for all div

--- a/homework2.css
+++ b/homework2.css
@@ -1,5 +1,14 @@
 #firstdiv{
 	background-color: green
-	
+}
 
+#seconddiv{
+	background-color: blue
+}
+
+#thirddiv{
+	background-color: pink
+}
+#fourthdiv{
+	background-color: purple
 }
